[package]
name = "lanmon"
version = "0.1.0"
authors = ["adrian Challinor <adrian.challinor@osiris.co.uk>"]
edition = "2018"
license = "GPL-3.0"
keywords = ["ping", "network", "lan", "rust"]
readme = "README.md"
categories = ["command-line-interface"]
repository = "https://github.com/AdrianChallinorOsiris/lanmon"
description = """
A very simple application to monitor the health of nodes on a LAN
"""

[dependencies]
clap = "2.32.0"
config = "0.7"
log = "0.4"
fern = { version = "0.5", features = ["colored"] }
chrono =  "0.4"
serde = "1.0.84"
serde_json = "1.0.34"
serde_derive = "1.0.84"
fastping-rs = "0.1.1"
